# CProjectTemplates

./: README.md
bear_demo/: Makefile  mk_rules.mk
bear_demo/dory/: dory.c
cmake_template/: CMakeLists.txt  main.c
cmake_template/dory/: CMakeLists.txt  dory.h
cmake_template/marlin/: CMakeLists.txt
cmake_template/nemo/: CMakeLists.txt  nemo.h
cproject_templates/distributed/: Makefile  main.c
cproject_templates/distributed/bar/: Makefile  aa.c  bar.c
cproject_templates/distributed/foo/: Makefile  bb.c  foo.c
cproject_templates/distributed/include/: aa.h  bar.h  bb.h  foo.h
cproject_templates/minimalism/: Makefile
cproject_templates/minimalism/inc/: func.h
cproject_templates/minimalism/src/: func.c  main.c
cproject_templates/rule_based/: Makefile  mk_rules.mk
cproject_templates/rule_based/main/: main.c
cproject_templates/rule_based/marlin/: marlin.c  marlin.h
cproject_templates/rule_based/nemo/: nemo.c
